Changed subheader formatting for modals in create-post https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/DxRIG_tLxk-Wa_6NYgpJmGQAMiWY?Type=TaskLink&Channel=Link&CreatedTime=637264945178300000

--- a/LoydCrafts.WebSite/Pages/create-post.cshtml
+++ b/LoydCrafts.WebSite/Pages/create-post.cshtml
@@ -118,11 +118,10 @@
                 <!-- Title -->
                 <div class="reuse-mod-body">
                     Was this item purchased with SU funds?
-                    <em>Make a new post: 1 of 3</em>
+                    
                 </div>
-                <br />
                 <div class="modal-body-small-it">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    <em>Make a new post: 1 of 3</em>
                 </div>
                 <br />
                 <!-- Radio buttons -->
@@ -167,6 +166,9 @@
                 <!-- Title -->
                 <div class="reuse-mod-body">
                     Which category best describes your item?
+                </div>
+
+                <div class="modal-body-small-it">
                     <em>Make a new post: 2 of 3</em>
                 </div>
                 <br />
@@ -211,9 +213,10 @@
                 <!-- Title -->
                 <div class="reuse-mod-body">
                     Item Specifics
-                    <em class="modal-sub-title">Make a new post: 3 of 3</em>
                 </div>
-
+                <div class="modal-body-small-it">
+                    <em>Make a new post: 3 of 3</em>
+                </div>
                 <br />
 
                 <!-- Photo Section -->
@@ -225,6 +228,7 @@
 
                 <!--Text Input Section-->
                 <div class="create-post-text-section">
+
 
                     <!-- Title section-->
                     <div class="create-post-component">
