Add hover specific formatting to modal buttons to change css aspects in site.css
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/MKP6cLe4jkiyRg98XbUBOmQANGYf?Type=TaskLink&Channel=Link&CreatedTime=637265141252050000

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -153,6 +153,12 @@
     color: antiquewhite;
 }
 
+.modal-button:hover{
+    font-weight: bold;
+    background-color: #aa0000;
+    color: antiquewhite;
+}
+
 .modal-link{
     text-align: center;
     text-decoration: underline;
