continue to format the modal button mouse hovers using site.css
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/MKP6cLe4jkiyRg98XbUBOmQANGYf?Type=TaskLink&Channel=Link&CreatedTime=637265141252050000

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -154,7 +154,8 @@
 }
 
 .modal-button:hover{
-    font-weight: bold;
+    font-weight: 600;
+    font-style: italic;
     background-color: #aa0000;
     color: antiquewhite;
 }
