Added personal item note to student item listing in home.cshtml

--- a/LoydCrafts.WebSite/Pages/home.cshtml
+++ b/LoydCrafts.WebSite/Pages/home.cshtml
@@ -70,6 +70,7 @@
             <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
             <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by santoneth</div>
             <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but serviceable. Please take it even if to try, next stop will be the trash!</div>
+            <div class="listing-item-student">Personal Item</div>
         </div>
 
         <div class="listing">
@@ -77,6 +78,7 @@
             <div class="listing-item-title" style="float:left">iPhone 3, some scratches, works fine</div>
             <div class="listing-item-date-person" style="float:right">May 1st, 2020 by ksmithfield</div>
             <div class="listing-item-text">iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
+            <div class="listing-item-student">Personal Item</div>
         </div>
 
         <div class="listing">
@@ -84,6 +86,7 @@
             <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
             <div class="listing-item-date-person" style="float:right">April 30th, 2020 by ssook2</div>
             <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
+            <div class="listing-item-student">Personal Item</div>
         </div>
 
         <div class="listing">
@@ -91,6 +94,7 @@
             <div class="listing-item-title" style="float:left">Four mini fake cacti/succulents!!</div>
             <div class="listing-item-date-person" style="float:right">April 29th, 2020 by jjenson</div>
             <div class="listing-item-text">Finally have the right lighting to get real plants, now my fake succulent babies need a new home! Super cute and [...]</div>
+            <div class="listing-item-student">Personal Item</div>
         </div>
 
     </main>
