--- a/LoydCrafts.WebSite/Pages/browsing.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsing.cshtml
@@ -51,6 +51,7 @@
             <div class="listing-item-title" style="float:left">Herman Miller Aeron Desk Chair</div>
             <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by emapelli</div>
             <div class="listing-item-text">Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.</div>
+            <div class="listing-item-facultystaff">SU Item</div>
         </div>
 
         <!-- Sample data -->
@@ -59,6 +60,7 @@
             <div class="listing-item-title" style="float:left">Small end table, 3 ft high, 26" across</div>
             <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by santoneth</div>
             <div class="listing-item-text">A small end table, suitable for a potted plant or maybe a lamp. Not too sturdy, but serviceable. Please take it even if to try, next stop will be the trash!</div>
+            <div class="listing-item-facultystaff">SU Item</div>
         </div>
 
         <!-- Darren's post from Daniel's Scenario - only item with working link -->
@@ -67,6 +69,7 @@
             <a class="listing-item-title" asp-area="" asp-page="/factory-fresh-apple-airbuds" style="float:left">Factory Fresh Apple Earbuds, get them quick!</></a>
             <div class="listing-item-date-person" style="float:right">May 1st, 2020 by dherstad</div>
             <div class="listing-item-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]</div>
+            <div class="listing-item-student">Personal Item</div>
         </div>
 
         <!-- Sample data -->
@@ -75,6 +78,7 @@
             <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
             <div class="listing-item-date-person" style="float:right">April 30th, 2020 by ssook2</div>
             <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
+            <div class="listing-item-student">Personal Item</div>
         </div>
 
     </main>
