--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -183,7 +183,7 @@
 
             </div>
             <div class="modal-footer">
-                
+
             </div>
         </div>
     </div>
@@ -212,8 +212,10 @@
                                 <br />
                                 <li>Your <strong>name</strong> and <strong>SU email</strong> will be <strong>publicly visible</strong> to all other users if/when you make a post.</li>
                                 <br />
-                                <li>Be respectful to your fellow community members: Seattle University's <strong>code of conduct</strong> still applies here and inappropriate posts
-                                can be <strong>flagged and removed</strong></li>
+                                <li>
+                                    Be respectful to your fellow community members: Seattle University's <strong>code of conduct</strong> still applies here and inappropriate posts
+                                    can be <strong>flagged and removed</strong>
+                                </li>
                                 <br />
                                 <li>Please <strong>do not </strong> contact Facilities for help with moving large items; individuals are responsible for coordinating and handling item exchanges themselves.</li>
                                 <br />
@@ -234,7 +236,7 @@
 
                     <div class="modal-buttons" style="margin: 0px;">
                         <div class="modal-button-container">
-                            <button type="button" id="agree-button"style="font-size:x-large;" class="btn btn-outline-dark modal-button" disabled
+                            <button type="button" id="agree-button" style="font-size:x-large;" class="btn btn-outline-dark modal-button" disabled
                                     data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-3">
                                 Agree
                             </button>
@@ -250,13 +252,14 @@
     </div>
 </div>
 
+<!-- Start Tutorial Modal -->
 <div id="tutorial-modal-3" class="modal fade in">
     <div class="modal-dialog modal-lg">
         <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
             <div class="modal-header">
             </div>
             <div class="modal-body">
-              
+
                 <div class="reuse-mod-body">
                     <em>Thank you!</em>  &nbsp;Let's get started with a<br />
                     quick walk-through of the site.
@@ -288,27 +291,27 @@
     </div>
 </div>
 
-
+<!-- Tutorial Modal: Creating & Managing Posts-->
 <div id="tutorial-modal-3a" class="modal fade in">
     <div class="modal-dialog modal-lg">
         <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
             <div class="modal-header">
             </div>
             <div class="modal-body">
-                
+
                 <div class="reuse-mod-body">
                     Post Management<br />
                 </div>
-    <!--
-    <br />
-    <div class="modal-body-small-it">
-        Lorem Ipsum
-    </div>
-    <br />
-    <br /> -->
+                <!--
+                <br />
+                <div class="modal-body-small-it">
+                    Lorem Ipsum
+                </div>
+                <br />
+                <br /> -->
                 <div class="reusesu-table-row">
                     <div class="modal-body-img">
-                        <img src="~/img/Tutorial_NewPostButton.PNG"/>
+                        <img src="~/img/Tutorial_NewPostButton.PNG" />
                     </div>
                     <div class="modal-body-text">
                         Something about making New Posts
@@ -354,13 +357,14 @@
     </div>
 </div>
 
+<!-- Tutorial Modal: Finding & Viewing Items-->
 <div id="tutorial-modal-3b" class="modal fade in">
     <div class="modal-dialog modal-lg">
         <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
             <div class="modal-header">
             </div>
             <div class="modal-body">
-                
+
                 <div class="reuse-mod-body">
                     Browsing and Searching<br />
                 </div>
@@ -384,7 +388,7 @@
                 </div>
                 <br />
 
-                
+
             </div>
             <div class="modal-footer"></div>
         </div>
@@ -392,14 +396,14 @@
 </div>
 
 
-
+<!-- Tutorial Modal: End Tutorial-->
 <div id="tutorial-modal-4" class="modal fade in">
     <div class="modal-dialog modal-lg">
         <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
             <div class="modal-header">
             </div>
             <div class="modal-body">
-               
+
                 <div class="reuse-mod-body">
                     <em>Lorem Ipsum!</em>  &nbsp;Lorem Ipsum<br />
                     lorem ipsum lorem ipsum and test.
@@ -419,20 +423,6 @@
                     </div>
                 </div>
 
-            </div>
-            <div class="modal-footer"></div>
-        </div>
-    </div>
-</div>
-
-<div id="tutorial-modal-5" class="modal fade in">
-    <div class="modal-dialog modal-lg" style="margin: 0px 200px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
-        <div class="modal-content">
-            <div class="modal-header">
-            </div>
-            <h3 class="modal-title boldfont">Welcome</h3>
-            <div class="modal-body">
-                <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
             </div>
             <div class="modal-footer"></div>
         </div>
