Revert "Added modal formatting to the flagging modal on factory-fresh-apple page."
This reverts commit abf7ca667ec4a5cc91ff53abd555e7e0f5af6aa7.

--- a/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
+++ b/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
@@ -63,7 +63,7 @@
 
 
 <!-- FLAGGING MODAL -->
-<div class="modal fade right" id="flaggisl" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div class="modal fade right" id="flagging-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
 
     <div class="modal-dialog modal-side modal-top-right modal-lg" role="document">
@@ -95,46 +95,6 @@
     </div>
 </div>
 
-
-<div id="flagging-modal" class="modal fade in">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
-            <div class="modal-header">
-            </div>
-            <div class="modal-body">
-
-                <div class="reuse-mod-body">
-                    Flagging: 'Apple Earbuds'<br />
-                </div>
-                <br />
-                <div class="modal-body-small-it">
-                    <h3>Are you sure you want to flag 'Apple Earbuds'?</h3>
-                    <ul>
-                        <li>Flagging is effective immediately and will remove the item as soon as you flag it.</li>
-                        <li>You should flag items if and only if they do not adhere to the <em>posting policy</em></li>
-                        <li>Flagging is anonymous and the poster will not know who flagged their item.</li>
-                    </ul>
-                    <h4>Why are you flagging?</h4>
-                    <div class="checkbox"><input type="checkbox" />&nbsp;The item has been posted multiple times</div>
-                    <div class="checkbox"><input type="checkbox" />&nbsp;The user is requesting payment for this item</div>
-                    <div class="checkbox"><input type="checkbox" />&nbsp;The item is no longer available</div>
-                    <div class="checkbox"><input type="checkbox" />&nbsp;The item is inappropriate or explicit</div>
-                    <div class="checkbox"><input type="checkbox" />&nbsp;The item violates the <em>posting policy</em> in another way</div>
-                </div>
-                <br />
-                <br />
-                <div class="modal-buttons">
-                    <div class="modal-button-container">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-danger"><a href="/home" style="no-link-form">Confirm Flagging</a></button>
-                    </div>
-                </div>
-
-            </div>
-            <div class="modal-footer"></div>
-        </div>
-    </div>
-</div>
 
 <!-- HELP TEXT MODAL -->
 <div class="modal fade right" id="flagging-help-text" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
