--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -104,6 +104,7 @@
 .modal-body-text {
     padding-top: 5px;
     font-size: 16px;
+    display: inline-block;
 
 }
 
@@ -187,6 +188,18 @@
     width: 25px;
     vertical-align: center;
     margin-top: 10px;
+}
+
+.modal-tutorial-img-2 {
+    float: left;
+    padding-left: 75px;
+    padding-top: 50px;
+}
+
+.modal-tutorial-text {
+    padding-left: 50px;
+    padding-top: 50px;
+    display: inline-block;
 }
 
 .new-post-plus {
