--- a/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
+++ b/LoydCrafts.WebSite/Pages/factory-fresh-apple-airbuds.cshtml
@@ -65,40 +65,51 @@
 <div id="flagging-modal" class="modal fade in">
     <div class="modal-dialog modal-lg">
         <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
+            
             <div class="modal-header">
             </div>
+
             <div class="modal-body">
 
                 <div class="reuse-mod-body">
                     Flagging: 'Apple Earbuds'<br />
                 </div>
                 <br />
-                <div class="modal-body-small-it">
-                    <h3>Are you sure you want to flag 'Apple Earbuds'?</h3>
-                    <ul>
+                <div class="modal-body-small-it" style="text-align: left;">
+                    <h4><em style="margin-left: 110px;">Are you sure you want to flag 'Apple Earbuds'?</em></h4>
+                    <ul style="margin-left: 110px;">
                         <li>Flagging is effective immediately and will remove the item as soon as you flag it.</li>
                         <li>You should flag items if and only if they do not adhere to the <em>posting policy</em></li>
                         <li>Flagging is anonymous and the poster will not know who flagged their item.</li>
                     </ul>
-                    <h4>Why are you flagging?</h4>
-                    <div class="checkbox"><input type="checkbox" />&nbsp;The item has been posted multiple times</div>
-                    <div class="checkbox"><input type="checkbox" />&nbsp;The user is requesting payment for this item</div>
-                    <div class="checkbox"><input type="checkbox" />&nbsp;The item is no longer available</div>
-                    <div class="checkbox"><input type="checkbox" />&nbsp;The item is inappropriate or explicit</div>
-                    <div class="checkbox"><input type="checkbox" />&nbsp;The item violates the <em>posting policy</em> in another way</div>
+                    <div class="modal-body-checkbox">
+                        <h4>Why are you flagging?</h4>
+                        <div class="checkbox"><input type="checkbox" />&nbsp;The item has been posted multiple times</div>
+                        <div class="checkbox"><input type="checkbox" />&nbsp;The user is requesting payment for this item</div>
+                        <div class="checkbox"><input type="checkbox" />&nbsp;The item is no longer available</div>
+                        <div class="checkbox"><input type="checkbox" />&nbsp;The item is inappropriate or explicit</div>
+                        <div class="checkbox"><input type="checkbox" />&nbsp;The item violates the <em>posting policy</em> in another way</div>
+                    </div>
                 </div>
                 <br />
                 <br />
                 <div class="modal-buttons">
                     <div class="modal-button-container">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-danger"><a href="/home" style="no-link-form">Confirm Flagging</a></button>
+                        <a style="font-size:large;" class="btn btn-outline-dark modal-button" asp-area="" asp-page="/home">
+                            Cancel
+                        </a>
+                        <br />
+                    </div>
+                    <div class="modal-button-container">
+                        <a style="font-size:large;" class="btn btn-outline-dark modal-button" asp-area="" asp-page="/home">
+                            Confirm Flagging
+                        </a>
+                        <br />
                     </div>
                 </div>
 
+                <div class="modal-footer"></div>
             </div>
-            <div class="modal-footer"></div>
-        </div>
     </div>
 </div>
 
