Adjusted CSS class references for Tutorial modal in Index.cshtml https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/Bo6Pz4JJb0uMED3oYZ_kqmQAFs7P?Type=TaskLink&Channel=Link&CreatedTime=637265529162260000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -298,44 +298,39 @@
             <div class="modal-header">
             </div>
             <div class="modal-body">
+               
+                    <div class="reuse-mod-body">
+                        Post Management<br />
+                    </div>
+     
+                    <div class="reusesu-table-row">
+                        <div class="modal-tutorial-img-2">
+                            <img src="~/img/Tutorial_NewPostButton.PNG" />
+                        </div>
+                        <div class="modal-tutorial-text">
+                            Something about making New Posts
+                        </div>
+                    </div>
 
-                <div class="reuse-mod-body">
-                    Post Management<br />
-                </div>
-                <!--
-                <br />
-                <div class="modal-body-small-it">
-                    Lorem Ipsum
-                </div>
-                <br />
-                <br /> -->
-                <div class="reusesu-table-row">
-                    <div class="modal-body-img">
-                        <img src="~/img/Tutorial_NewPostButton.PNG" />
+                    <div class="reusesu-table-row">
+                        <div class="modal-tutorial-img-2">
+                            <img src="~/img/Tutorial_ItemViewLink.PNG" />
+                        </div>
+                        <div class="modal-tutorial-text">
+                            Something about viewing posts
+                        </div>
                     </div>
-                    <div class="modal-body-text">
-                        Something about making New Posts
-                    </div>
-                </div>
 
-                <div class="reusesu-table-row">
-                    <div class="modal-body-img">
-                        <img src="~/img/Tutorial_ItemViewLink.PNG" />
+                    <div class="reusesu-table-row">
+                        <div class="modal-tutorial-img-2">
+                            <img src="~/img/Tutorial_EditDeletePostButtons.PNG" />
+                        </div>
+                        <div class="modal-tutorial-text">
+                            Something about editing and deleting posts
+                        </div>
                     </div>
-                    <div class="modal-body-text">
-                        Something about viewing posts
-                    </div>
-                </div>
 
-                <div class="reusesu-table-row">
-                    <div class="modal-body-img">
-                        <img src="~/img/Tutorial_EditDeletePostButtons.PNG" />
-                    </div>
-                    <div class="modal-body-text">
-                        Something about editing and deleting posts
-                    </div>
-                </div>
-
+               
 
                 <div class="modal-buttons">
                     <div class="modal-button-container">
