Specified Tutorial modal text content in Index.cshtml https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/Bo6Pz4JJb0uMED3oYZ_kqmQAFs7P?Type=TaskLink&Channel=Link&CreatedTime=637265538160200000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -308,7 +308,8 @@
                             <img src="~/img/Tutorial_NewPostButton.PNG" />
                         </div>
                         <div class="modal-tutorial-text">
-                            Something about making New Posts
+                            <strong> Click on New Post </strong>to create a new post for your item.  <br/>
+                            You will be prompted for all necessary information. <br/>
                         </div>
                     </div>
 
@@ -317,7 +318,10 @@
                             <img src="~/img/Tutorial_ItemViewLink.PNG" />
                         </div>
                         <div class="modal-tutorial-text">
-                            Something about viewing posts
+                            <br/>
+                            Once you have made your post you will see it in the <br/>
+                            item listing on the home page.  <strong>Click on your post title </strong><br/>
+                            to view its details and post management options. </br>
                         </div>
                     </div>
 
@@ -326,7 +330,9 @@
                             <img src="~/img/Tutorial_EditDeletePostButtons.PNG" />
                         </div>
                         <div class="modal-tutorial-text">
-                            Something about editing and deleting posts
+                            Once you have opened your post details, you will see post <br/>
+                            management options in the <strong>left sidebar</strong>.  This includes the <br/>
+                            options to <strong>edit your post</strong> and <strong>delete your post.</strong> <br/>
                         </div>
                     </div>
 
