--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -300,7 +300,7 @@
             <div class="modal-body">
                
                     <div class="reuse-mod-body">
-                        Post Management<br />
+                        Creating & Managing Posts<br />
                     </div>
      
                     <div class="reusesu-table-row">
