--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -365,16 +365,46 @@
             <div class="modal-header">
             </div>
             <div class="modal-body">
-
                 <div class="reuse-mod-body">
-                    Browsing and Searching<br />
+                    Finding & Viewing Posts<br />
                 </div>
-                <br />
-                <div class="modal-body-small-it">
-                    Lorem Ipsum
+
+                <div class="reusesu-table-row">
+                    <div class="modal-tutorial-img-2">
+                        <img src="~/img/Tutorial_NewPostButton.PNG" />
+                    </div>
+                    <div class="modal-tutorial-text">
+                        <strong> Click on New Post </strong>to create a new post for your item.  <br />
+                        You will be prompted for all necessary information. <br />
+                    </div>
                 </div>
-                <br />
-                <br />
+
+                <div class="reusesu-table-row">
+                    <div class="modal-tutorial-img-2">
+                        <img src="~/img/Tutorial_ItemViewLink.PNG" />
+                    </div>
+                    <div class="modal-tutorial-text">
+                        <br />
+                        Once you have made your post you will see it in the <br />
+                        item listing on the home page.  <strong>Click on your post title </strong><br />
+                        to view its details and post management options. </br>
+                    </div>
+                </div>
+
+                <div class="reusesu-table-row">
+                    <div class="modal-tutorial-img-2">
+                        <img src="~/img/Tutorial_EditDeletePostButtons.PNG" />
+                    </div>
+                    <div class="modal-tutorial-text">
+                        Once you have opened your post details, you will see post <br />
+                        management options in the <strong>left sidebar</strong>.  This includes the <br />
+                        options to <strong>edit your post</strong> and <strong>delete your post.</strong> <br />
+                    </div>
+                </div>
+
+
+
+
                 <div class="modal-buttons">
                     <div class="modal-button-container">
                         <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button"
