--- a/LoydCrafts.WebSite/Pages/browsing.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsing.cshtml
@@ -28,16 +28,16 @@
         <div class="sidebar-lower">
 
             <div class="lower-sidebar-text">Set defaults</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp; Show All Categories</div>
+            <div class="checkbox"><input type="checkbox" />&nbsp;Include My Items</div>
 
             <div class="lower-sidebar-text">Filter by Category</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
+            <div class="checkbox"><input type="checkbox" />&nbsp;Decor</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Books</div>
+            <div class="checkbox"><input type="checkbox" />&nbsp;Electronics</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Misc</div>
+            
         </div>
 
     </div>
