Updated image link to display search bar image in Index.cshtml https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/Bo6Pz4JJb0uMED3oYZ_kqmQAFs7P?Type=TaskLink&Channel=Link&CreatedTime=637265586507820000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -371,7 +371,7 @@
 
                 <div class="reusesu-table-row">
                     <div class="modal-tutorial-img-2">
-                        <img src="~/img/Tutorial_NewPostButton.PNG" />
+                        <img src="~/img/Tutorial_SearchBar.PNG" />
                     </div>
                     <div class="modal-tutorial-text">
                         <strong> Click on New Post </strong>to create a new post for your item.  <br />
