--- a/LoydCrafts.WebSite/Pages/create-post.cshtml
+++ b/LoydCrafts.WebSite/Pages/create-post.cshtml
@@ -36,19 +36,16 @@
         <!-- Lower box of the left sidebar -->
         <div class="sidebar-lower">
 
-            <!--Default Setting Selection-->
             <div class="lower-sidebar-text">Set defaults</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp; Select All</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Include My Items</div>
 
-            <!--Category Selection-->
             <div class="lower-sidebar-text">Filter by Category</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Decor</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Books</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Electronics</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Misc</div>
 
         </div>
 
