Updated filter checkboxes in Index.cshtml https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/qf8SS3eT4UWmwQsGiasdAWQAF3m8?Type=TaskLink&Channel=Link&CreatedTime=637265596786550000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -38,16 +38,15 @@
         <div class="sidebar-lower">
 
             <div class="lower-sidebar-text">Set defaults</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp; Select All</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Include My Items</div>
 
             <div class="lower-sidebar-text">Filter by Category</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Test</div>
-            <div class="checkbox"><input type="checkbox" />&nbsp;Test</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Decor</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Books</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Electronics</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;Misc</div>
         </div>
 
     </div>
