Updated Tutorial modal text content in Index.cshtml https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/Bo6Pz4JJb0uMED3oYZ_kqmQAFs7P?Type=TaskLink&Channel=Link&CreatedTime=637265606041770000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -373,20 +373,21 @@
                         <img src="~/img/Tutorial_SearchBar.PNG" />
                     </div>
                     <div class="modal-tutorial-text">
-                        <strong> Click on New Post </strong>to create a new post for your item.  <br />
-                        You will be prompted for all necessary information. <br />
+                        Use the <strong> search bar </strong>, located at the top of <br/>
+                        the page, to look for items by <strong>keyword.</strong>  <br />
                     </div>
                 </div>
 
                 <div class="reusesu-table-row">
                     <div class="modal-tutorial-img-2">
-                        <img src="~/img/Tutorial_ItemViewLink.PNG" />
+                        <img src="~/img/Tutorial_Filters.PNG" />
                     </div>
                     <div class="modal-tutorial-text">
                         <br />
-                        Once you have made your post you will see it in the <br />
-                        item listing on the home page.  <strong>Click on your post title </strong><br />
-                        to view its details and post management options. </br>
+                        Use the checkboxes on the sidebar to <strong>filter items by category.</strong> <br />
+                        You can also auto-select all categories using <strong>Select All</strong><br />
+                        and choose whether or not to see your own posts with</br>
+                        <strong>Include My Posts.</strong>
                     </div>
                 </div>
 
@@ -395,9 +396,12 @@
                         <img src="~/img/Tutorial_EmailFlagButtons.PNG" />
                     </div>
                     <div class="modal-tutorial-text">
-                        Once you have opened your post details, you will see post <br />
-                        management options in the <strong>left sidebar</strong>.  This includes the <br />
-                        options to <strong>edit your post</strong> and <strong>delete your post.</strong> <br />
+                        When viewing the details of another person's post, you can find <br />
+                        post actions in the <strong>left sidebar</strong>.  This includes the <br />
+                        options to <strong>email the poster</strong>, which will auto-generate<br />
+                        an Outlook email draft with the poster as the recipient, and the<br />
+                        <strong>flag post</strong> option. You can click on "How does flagging<br />
+                        work?" to learn more about the flagging process.<br />
                     </div>
                 </div>
 
