Updated text in Finish Tutorial modal of Index.cshtml
https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/Bo6Pz4JJb0uMED3oYZ_kqmQAFs7P?Type=TaskLink&Channel=Link&CreatedTime=637265622524250000

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -439,12 +439,12 @@
             <div class="modal-body">
 
                 <div class="reuse-mod-body">
-                    <em>Lorem Ipsum!</em>  &nbsp;Lorem Ipsum<br />
-                    lorem ipsum lorem ipsum and test.
+                    Thank you! &nbsp;<br />
+                    
                 </div>
                 <br />
                 <div class="modal-body-small-it">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec nibh nec lectus luctus lacinia vitae id lectus.
+                    You are now ready to use the site!  Click on "Finish Tutorial" to be directed to the home page.
                 </div>
                 <br />
                 <br />
